--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns-tz": "3.1.3",
     "gray-matter": "4.0.3",
     "next": "14.2.5",
-    "next-mdx-remote": "5.0.0",
+    "next-mdx-remote": "^6.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reading-time": "1.5.0",
